# LLM-Pipeline

./: .env copy.example  .gitignore  CLEARML_MIGRATION_SUMMARY.md  MLproject  README.md  bentofile.yaml  client.py  conda.yaml  config.py  free_version  pyproject.toml  python_env.yaml  requirements.txt  setup-guide  tech_stack.md  test_clearml_integration.py
configs/: end_to_end_data.yaml  evaluating.yaml  export_artifact_to_json.yaml  feature_engineering.yaml  generate_instruct_datasets.yaml  generate_instruct_datasets_openai.yaml  generate_preference_datasets.yaml  generate_preference_datasets_openai.yaml  test_gemini_instruct.yaml  training.yaml
docs/: MIGRATION_FROM_AWS.md  architecture.md  data_flow.md  deployment_pipeline.mermaid  end_to_end_data_pipeline.mermaid  hybrid.md  local_setup.md  mlflow_runner_pipeline.mermaid  overall_system_architecture.mermaid  setup-guide.md  training_pipeline.md  training_pipeline.mermaid
llm_pipeline_system/: settings.py
llm_pipeline_system/application/crawlers/: base.py  custom_article.py  github.py  linkedin.py  medium.py
llm_pipeline_system/application/dataset/: constants.py  generation.py  utils.py
llm_pipeline_system/application/networks/: embeddings.py
llm_pipeline_system/application/preprocessing/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
llm_pipeline_system/application/rag/: reranking.py  retriever.py
llm_pipeline_system/application/utils/: misc.py  split_user_full_name.py
llm_pipeline_system/domain/: chunks.py  dataset.py  embedded_chunks.py  prompt.py  queries.py
llm_pipeline_system/domain/base/: nosql.py  vector.py
llm_pipeline_system/inference/: bento_service.py
llm_pipeline_system/infrastructure/: clearml_utils.py  inference_pipeline_api.py
llm_pipeline_system/infrastructure/db/: mongo.py  qdrant.py
llm_pipeline_system/infrastructure/deployment/: __init__.py  local_deployment.py
llm_pipeline_system/infrastructure/huggingface/: __init__.py  spaces_deployment.py
llm_pipeline_system/model/evaluation/: local_evaluation.py
llm_pipeline_system/model/finetuning/: finetune.py  local_finetuning.py  requirements.txt
llm_pipeline_system/model/inference/: __init__.py  local_inference.py  run.py
mlruns/0/: meta.yaml
mlruns/0/00d03edee5e54fd2a98c0056d72cfdeb/: meta.yaml
mlruns/0/00e6b70522f940a39b3c7d39337c433c/: meta.yaml
mlruns/0/0a69c8bd6c4546ab9d8c83f746ecca60/: meta.yaml
mlruns/0/0eba2a6f14f94e048fa60f1129ef1aab/: meta.yaml
mlruns/0/0f225c0f43104562a28737b7e61b48a6/: meta.yaml
mlruns/0/0f75af76a038418181e4883afb4953df/: meta.yaml
mlruns/0/112ee91f9aa04a43b794817ad516a3a6/: meta.yaml
mlruns/0/13c6029c23b04efeb8a6646916bb2bd6/: meta.yaml
mlruns/0/1afee88b05914ebb917ed77c3c91553c/: meta.yaml
mlruns/0/1b0e3983b49e4731960f7057507aef0e/: meta.yaml
mlruns/0/1d80256665644f9ab60dc8c5867ae7da/: meta.yaml
mlruns/0/1f023a142e5441ac832be44c1f7c1ffa/: meta.yaml
mlruns/0/30277930b38f4834b100667cb8a46d67/: meta.yaml
mlruns/0/3da45aac6ca3466db47c01b1d5804731/: meta.yaml
mlruns/0/3ef53a80452c4d72bf9ddf17a35396a4/: meta.yaml
mlruns/0/4096152e33a341368acdbb94c0893b2e/: meta.yaml
mlruns/0/4fa0f5d13504466db93fae235a5c63a7/: meta.yaml
mlruns/0/5675d57e85f04af4909ccdee06dc87bd/: meta.yaml
mlruns/0/58c55ea1b4eb4ecbbe010accb312e072/: meta.yaml
mlruns/0/5922f16bdb2e4d83a47b1ed872abb282/: meta.yaml
mlruns/0/59b3aa17d4bf4add9a2d3015ff6d857c/: meta.yaml
mlruns/0/5af2ca43cb244e5c9f226a8c22e257f1/: meta.yaml
mlruns/0/5c304c123c1543feb0ca94a4cd078182/: meta.yaml
mlruns/0/5cf46bd071c8426db78dae0a988ecd18/: meta.yaml
mlruns/0/6598ce1c014149d68d7db4ebc2ce710b/: meta.yaml
mlruns/0/6e81f0fd1017403abe13a3ef84863c8d/: meta.yaml
mlruns/0/7067a6bfacb147cca288fa7c0861e739/: meta.yaml
mlruns/0/727271d9de724c03ae914f023a13f2e5/: meta.yaml
mlruns/0/727d8b3033604b5f98d139c82e83ccd3/: meta.yaml
mlruns/0/753912752c4943969d77ebc40b1c0c97/: meta.yaml
mlruns/0/763c389042b747e7988ca65bf16e9690/: meta.yaml
mlruns/0/777d4c602c2b4ab09425bd2ed067255c/: meta.yaml
mlruns/0/7c1b5836786042918c440a41b84fded8/: meta.yaml
mlruns/0/7e0e5cf773a44a04a4bc6f7d0761ae3d/: meta.yaml
mlruns/0/7e62692f32fb464db067092173effe2f/: meta.yaml
mlruns/0/7eca66f5077c402ba4c1043ff2a475bf/: meta.yaml
mlruns/0/80b3bb4ff643406a9ab2bcd1b9f102d6/: meta.yaml
mlruns/0/8151a1ad22854fd28e540e2d757378ac/: meta.yaml
mlruns/0/86a321110f1644ef9e5dd17038b6ac3f/: meta.yaml
mlruns/0/8868b2122d5d4ddfba5580ef3221b695/: meta.yaml
mlruns/0/8b58fdd088fc415f8fe50c971096cf13/: meta.yaml
mlruns/0/8c0d0edbeace41d7a6261e568d15112c/: meta.yaml
mlruns/0/8e7f7229a0b64833a5efb79ba40d8b9a/: meta.yaml
mlruns/0/97f531ced9cb4c1e87513413504f4a1d/: meta.yaml
pipelines/: __init__.py  digital_data_etl.py  end_to_end_data.py  evaluating.py  export_artifact_to_json.py  feature_engineering.py  generate_datasets.py  run_mlflow.py  training.py
steps/: __init__.py
steps/etl/: crawl_links.py  get_or_create_user.py
steps/evaluating/: evaluate.py
steps/export/: serialize_artifact.py  to_json.py
steps/feature_engineering/: clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
steps/generate_datasets/: create_prompts.py  generate_intruction_dataset.py  generate_preference_dataset.py  push_to_huggingface.py  query_feature_store.py
steps/training/: train.py
tmp/selenium_user_data/: Local State
tools/: chat_test.py  data_warehouse.py  deploy_local.py  ml_service.py  rag.py  run.py
(+269 files in other folders)
